lib/src/system_informer/generated_bindings.dart


  static PH_POWERACTION_TYPE fromValue(int value) => switch (value) {
        0 => PH_POWERACTION_TYPE_NONE,
        1 => PH_POWERACTION_TYPE_WIN32,
        2 => PH_POWERACTION_TYPE_NATIVE,
        3 => PH_POWERACTION_TYPE_CRITICAL,
        4 => PH_POWERACTION_TYPE_ADVANCEDBOOT,
        5 => PH_POWERACTION_TYPE_FIRMWAREBOOT,
        6 => PH_POWERACTION_TYPE_UPDATE,
        7 => PH_POWERACTION_TYPE_WDOSCAN,
        8 => PH_POWERACTION_TYPE_MAXIMUM,
        _ =>
          throw ArgumentError('Unknown value for PH_POWERACTION_TYPE: $value'),
      };
}

final class HINSTANCE__ extends ffi.Struct {
  @ffi.Int()
  external int unused;
}

typedef HINSTANCE = ffi.Pointer<HINSTANCE__>;

@ffi.Packed(2)
final class DLGTEMPLATE extends ffi.Struct {
  @DWORD()
  external int style;

  @DWORD()
  external int dwExtendedStyle;

  @WORD()
  external int cdit;

  @ffi.Short()
  external int x;

  @ffi.Short()
  external int y;

  @ffi.Short()
  external int cx;

  @ffi.Short()
  external int cy;
}

typedef LPCDLGTEMPLATEW = ffi.Pointer<DLGTEMPLATE>;
typedef LPCDLGTEMPLATE = LPCDLGTEMPLATEW;
typedef PROPSHEETPAGE_RESOURCE = LPCDLGTEMPLATE;

final class UnnamedUnion42 extends ffi.Union {
  external LPCWSTR pszTemplate;

  external PROPSHEETPAGE_RESOURCE pResource;
}

typedef LPFNPSPCALLBACKWFunction = UINT Function(
    HWND hwnd, UINT uMsg, ffi.Pointer<PROPSHEETPAGEW> ppsp);
typedef DartLPFNPSPCALLBACKWFunction = DartUINT Function(
    HWND hwnd, DartUINT uMsg, ffi.Pointer<PROPSHEETPAGEW> ppsp);
typedef LPFNPSPCALLBACKW
    = ffi.Pointer<ffi.NativeFunction<LPFNPSPCALLBACKWFunction>>;

final class UnnamedUnion43 extends ffi.Union {
  external HBITMAP hbmHeader;

  external LPCWSTR pszbmHeader;
}

final class PROPSHEETPAGEW extends ffi.Struct {
  @DWORD()
  external int dwSize;

  @DWORD()
  external int dwFlags;

  external HINSTANCE hInstance;

  external UnnamedUnion42 unnamed;

  external UnnamedUnion42 unnamed$1;

  external LPCWSTR pszTitle;

  external DLGPROC pfnDlgProc;

  @LPARAM()
  external int lParam;

  external LPFNPSPCALLBACKW pfnCallback;

  external ffi.Pointer<UINT> pcRefParent;

  external LPCWSTR pszHeaderTitle;

  external LPCWSTR pszHeaderSubTitle;

  external HANDLE hActCtx;

  external UnnamedUnion43 unnamed$2;
}

typedef PROPSHEETPAGEW_V4 = PROPSHEETPAGEW;
typedef PROPSHEETPAGEW$1 = PROPSHEETPAGEW_V4;

/// procprp
final class PH_PROCESS_PROPPAGECONTEXT extends ffi.Struct {
  external PPH_PROCESS_PROPCONTEXT PropContext;

  external PVOID Context;

  external PROPSHEETPAGEW$1 PropSheetPage;

  @BOOLEAN()
  external int LayoutInitialized;
}

/// procprp
typedef PH_PROCESS_PROPPAGECONTEXT$1 = PH_PROCESS_PROPPAGECONTEXT;
typedef PPH_PROCESS_PROPPAGECONTEXT = ffi.Pointer<PH_PROCESS_PROPPAGECONTEXT>;
typedef PH_CALLBACK_FUNCTION
    = ffi.NativeFunction<ffi.Void Function(PVOID Parameter, PVOID Context)>;
typedef PPH_CALLBACK_FUNCTION = ffi.Pointer<PH_CALLBACK_FUNCTION>;

final class PH_CALLBACK_REGISTRATION extends ffi.Struct {
  external LIST_ENTRY$1 ListEntry;

  external PPH_CALLBACK_FUNCTION Function$;

  external PVOID Context;

  @LONG()
  external int Busy;

  @BOOLEAN()
  external int Unregistering;

  @BOOLEAN()
  external int Reserved;

  @USHORT()
  external int Flags;
}

typedef PH_CALLBACK_REGISTRATION$1 = PH_CALLBACK_REGISTRATION;

/// procprpp
final class PH_THREADS_CONTEXT extends ffi.Struct {
  external PPH_THREAD_PROVIDER Provider;

  external PH_CALLBACK_REGISTRATION$1 ProviderRegistration;

  external PH_CALLBACK_REGISTRATION$1 AddedEventRegistration;

  external PH_CALLBACK_REGISTRATION$1 ModifiedEventRegistration;

  external PH_CALLBACK_REGISTRATION$1 RemovedEventRegistration;

  external PH_CALLBACK_REGISTRATION$1 UpdatedEventRegistration;

  external PH_CALLBACK_REGISTRATION$1 LoadingStateChangedEventRegistration;

  external HWND WindowHandle;

  /// phapppub
  external HWND Private;

  /// phapppub
  external HWND TreeNewHandle;
}

/// procprpp
typedef PH_THREADS_CONTEXT$1 = PH_THREADS_CONTEXT;
typedef PPH_THREADS_CONTEXT = ffi.Pointer<PH_THREADS_CONTEXT>;

final class PH_MODULES_CONTEXT extends ffi.Opaque {}

typedef PH_MODULES_CONTEXT$1 = PH_MODULES_CONTEXT;
typedef PPH_MODULES_CONTEXT = ffi.Pointer<PH_MODULES_CONTEXT>;

final class PH_HANDLES_CONTEXT extends ffi.Opaque {}

typedef PH_HANDLES_CONTEXT$1 = PH_HANDLES_CONTEXT;
typedef PPH_HANDLES_CONTEXT = ffi.Pointer<PH_HANDLES_CONTEXT>;

final class PH_MEMORY_CONTEXT extends ffi.Struct {
  external HANDLE ProcessId;

  external HWND WindowHandle;

  /// phapppub
  external HWND Private;

  /// phapppub
  external HWND TreeNewHandle;
}

typedef PH_MEMORY_CONTEXT$1 = PH_MEMORY_CONTEXT;
typedef PPH_MEMORY_CONTEXT = ffi.Pointer<PH_MEMORY_CONTEXT>;

/// hndlmenu
final class PH_HANDLE_ITEM_INFO extends ffi.Struct {
  external HANDLE ProcessId;

  external HANDLE Handle;

  external PPH_STRING TypeName;

  external PPH_STRING BestObjectName;
}

/// hndlmenu
typedef PH_HANDLE_ITEM_INFO$1 = PH_HANDLE_ITEM_INFO;
typedef PPH_HANDLE_ITEM_INFO = ffi.Pointer<PH_HANDLE_ITEM_INFO>;

const int PHNT_VERSION = 4294967295;

const int S_IFMT = 61440;

const int S_IFDIR = 16384;

const int S_IFCHR = 8192;

const int S_IFIFO = 4096;

const int S_IFREG = 32768;

const int S_IREAD = 256;

const int S_IWRITE = 128;

const int S_IEXEC = 64;

const int WINDOWS_ANCIENT = 0;

const int WINDOWS_XP = 51;

const int WINDOWS_SERVER_2003 = 52;

const int WINDOWS_VISTA = 60;

const int WINDOWS_7 = 61;

const int WINDOWS_8 = 62;

const int WINDOWS_8_1 = 63;

const int WINDOWS_10 = 100;

const int WINDOWS_10_TH2 = 101;

const int WINDOWS_10_RS1 = 102;

const int WINDOWS_10_RS2 = 103;

const int WINDOWS_10_RS3 = 104;

const int WINDOWS_10_RS4 = 105;

const int WINDOWS_10_RS5 = 106;

const int WINDOWS_10_19H1 = 107;

const int WINDOWS_10_19H2 = 108;

const int WINDOWS_10_20H1 = 109;

const int WINDOWS_10_20H2 = 110;

const int WINDOWS_10_21H1 = 111;

const int WINDOWS_10_21H2 = 112;

const int WINDOWS_10_22H2 = 113;

const int WINDOWS_11 = 114;

const int WINDOWS_11_22H2 = 115;

const int WINDOWS_11_23H2 = 116;

const int WINDOWS_11_24H2 = 117;

const int WINDOWS_NEW = 4294967295;

const int PIO_APC_ROUTINE_DEFINED = 1;

const int ALIGN_SIZE = 8;

const int UM_NDIS60 = 1;

const int PH_NETWORK_TYPE_NONE = 0;

const int PH_NETWORK_TYPE_IPV4 = 1;

const int PH_NETWORK_TYPE_IPV6 = 2;

const int PH_NETWORK_TYPE_HYPERV = 4;

const int PH_NETWORK_TYPE_MASK = 8;

const int PH_PROTOCOL_TYPE_NONE = 0;

const int PH_PROTOCOL_TYPE_TCP = 16;

const int PH_PROTOCOL_TYPE_UDP = 32;

const int PH_PROTOCOL_TYPE_MASK = 48;

const int PH_NETWORK_PROTOCOL_NONE = 0;

const int PH_NETWORK_PROTOCOL_TCP4 = 17;

const int PH_NETWORK_PROTOCOL_TCP6 = 18;

const int PH_NETWORK_PROTOCOL_UDP4 = 33;

const int PH_NETWORK_PROTOCOL_UDP6 = 34;

const int PH_NETWORK_PROTOCOL_HYPERV = 4;

const int PH_HTTP_DEFAULT_PORT = 0;

const int PH_HTTP_DEFAULT_HTTP_PORT = 80;

const int PH_HTTP_DEFAULT_HTTPS_PORT = 443;

const int PH_HTTP_FLAG_SECURE = 1;

const int PH_HTTP_FLAG_REFRESH = 2;

const int PH_HTTP_STATUS_OK = 200;

const int PH_HTTP_STATUS_CREATED = 201;

const int PH_HTTP_STATUS_REDIRECT_METHOD = 303;

const int PH_HTTP_STATUS_REDIRECT = 302;

const int PH_HTTP_QUERY_CONTENT_LENGTH = 1;

const int PH_HTTP_QUERY_STATUS_CODE = 2;

const int PH_HTTP_FEATURE_REDIRECTS = 1;

const int PH_HTTP_FEATURE_KEEP_ALIVE = 2;

const int PH_HTTP_SECURITY_IGNORE_UNKNOWN_CA = 1;

const int PH_HTTP_SECURITY_IGNORE_CERT_DATE_INVALID = 2;

const int PH_HTTP_PROTOCOL_FLAG_HTTP2 = 1;

const int PH_HTTP_PROTOCOL_FLAG_HTTP3 = 2;

const int PH_FILE_STREAM_HANDLE_UNOWNED = 1;

const int PH_FILE_STREAM_UNBUFFERED = 2;

const int PH_FILE_STREAM_ASYNCHRONOUS = 4;

const int PH_FILE_STREAM_OWN_POSITION = 8;

const int PH_FILE_STREAM_APPEND = 65536;

const int PH_FILE_STREAM_WRITTEN = 2147483648;

const int RFF_NOBROWSE = 1;

const int RFF_NODEFAULT = 2;

const int RFF_CALCDIRECTORY = 4;

const int RFF_NOLABEL = 8;

const int RFF_NOSEPARATEMEM = 32;

const int RFF_OPTRUNAS = 64;

const int RFN_VALIDATE = -510;

const int RFN_LIMITEDRUNAS = -511;

const int RF_OK = 0;

const int RF_CANCEL = 1;

const int RF_RETRY = 2;

const int DCX_USESTYLE = 65536;

const int DCX_NODELETERGN = 262144;

const int PH_WINDOW_TIMER_DEFAULT = 15;

const int WM_REFLECT = 8192;

const int PH_GET_WINDOW_TEXT_INTERNAL = 1;

const int PH_GET_WINDOW_TEXT_LENGTH_ONLY = 2;

const int PH_LOAD_ICON_SHARED = 1;

const int PH_LOAD_ICON_SIZE_SMALL = 2;

const int PH_LOAD_ICON_SIZE_LARGE = 4;

const int PH_LOAD_ICON_STRICT = 8;

const int PH_ANCHOR_LEFT = 1;

const int PH_ANCHOR_TOP = 2;

const int PH_ANCHOR_RIGHT = 4;

const int PH_ANCHOR_BOTTOM = 8;

const int PH_ANCHOR_ALL = 15;

const int PH_LAYOUT_FORCE_INVALIDATE = 4096;

const int PH_LAYOUT_TAB_CONTROL = 8192;

const int PH_LAYOUT_IMMEDIATE_RESIZE = 16384;

const int PH_LAYOUT_DUMMY_MASK = 8192;

const int PH_WINDOW_CONTEXT_DEFAULT = 65535;

const int PH_ALIGN_CENTER = 0;

const int PH_ALIGN_LEFT = 1;

const int PH_ALIGN_RIGHT = 2;

const int PH_ALIGN_TOP = 4;

const int PH_ALIGN_BOTTOM = 8;

const int PH_ALIGN_MONOSPACE_FONT = 2147483648;

const int ELVM_ADDFALLBACKCOLUMN = 33874;

const int ELVM_ADDFALLBACKCOLUMNS = 33877;

const int ELVM_RESERVED5 = 33888;

const int ELVM_INIT = 33870;

const int ELVM_SETCOLUMNWIDTH = 33889;

const int ELVM_SETCOMPAREFUNCTION = 33872;

const int ELVM_SETCONTEXT = 33871;

const int ELVM_SETCURSOR = 33882;

const int ELVM_RESERVED4 = 33886;

const int ELVM_SETITEMCOLORFUNCTION = 33879;

const int ELVM_SETITEMFONTFUNCTION = 33885;

const int ELVM_RESERVED1 = 33880;

const int ELVM_SETREDRAW = 33884;

const int ELVM_GETSORT = 33881;

const int ELVM_SETSORT = 33876;

const int ELVM_SETSORTFAST = 33887;

const int ELVM_RESERVED0 = 33878;

const int ELVM_SETTRISTATE = 33875;

const int ELVM_SETTRISTATECOMPAREFUNCTION = 33873;

const int ELVM_SORTITEMS = 33869;

const int ELVM_RESERVED3 = 33883;

const int ELVSCW_AUTOSIZE = -1;

const int ELVSCW_AUTOSIZE_USEHEADER = -2;

const int ELVSCW_AUTOSIZE_REMAININGSPACE = -3;

const int PH_SHUTDOWN_RESTART = 1;

const int PH_SHUTDOWN_POWEROFF = 2;

const int PH_SHUTDOWN_INSTALL_UPDATES = 4;

const int PH_SHUTDOWN_HYBRID = 8;

const int PH_SHUTDOWN_RESTART_BOOTOPTIONS = 16;

const int PH_DRAW_TIMELINE_OVERFLOW = 1;

const int PH_DRAW_TIMELINE_DARKTHEME = 2;

const int DBT_DEVICEARRIVAL = 32768;

const int DBT_DEVICEREMOVECOMPLETE = 32772;

const int DBT_DEVTYP_VOLUME = 2;

const String PH_TREENEW_CLASSNAME = 'P';

const int TN_STYLE_ICONS = 1;

const int TN_STYLE_DOUBLE_BUFFERED = 2;

const int TN_STYLE_NO_DIVIDER = 4;

const int TN_STYLE_ANIMATE_DIVIDER = 8;

const int TN_STYLE_NO_COLUMN_SORT = 16;

const int TN_STYLE_NO_COLUMN_REORDER = 32;

const int TN_STYLE_THIN_ROWS = 64;

const int TN_STYLE_NO_COLUMN_HEADER = 128;

const int TN_STYLE_CUSTOM_COLORS = 256;

const int TN_STYLE_ALWAYS_SHOW_SELECTION = 512;

const int TN_STYLE_CUSTOM_HEADERDRAW = 1024;

const int TN_FLAG_ITEM_DRAG_SELECT = 1;

const int TN_FLAG_NO_UNFOLDING_TOOLTIPS = 2;

const int TN_CACHE = 1;

const int TN_AUTO_FORECOLOR = 4096;

const int TN_COLUMN_FIXED = -2;

const int TN_COLUMN_CONTEXT = 1;

const int TN_COLUMN_TEXT = 2;

const int TN_COLUMN_WIDTH = 4;

const int TN_COLUMN_ALIGNMENT = 8;

const int TN_COLUMN_DISPLAYINDEX = 16;

const int TN_COLUMN_TEXTFLAGS = 32;

const int TN_COLUMN_FLAG_VISIBLE = 1048576;

const int TN_COLUMN_FLAG_CUSTOMDRAW = 2097152;

const int TN_COLUMN_FLAG_FIXED = 4194304;

const int TN_COLUMN_FLAG_SORTDESCENDING = 8388608;

const int TN_COLUMN_FLAG_NODPISCALEONADD = 16777216;

const int TN_COLUMN_FLAGS = 4293918720;

const int TN_CACHE_COLOR = 1;

const int TN_CACHE_FONT = 2;

const int TN_CACHE_ICON = 4;

const int TN_MEASURE_TEXT = 1;

const int TN_PART_CELL = 1;

const int TN_PART_PLUSMINUS = 2;

const int TN_PART_ICON = 4;

const int TN_PART_CONTENT = 8;

const int TN_PART_TEXT = 16;

const int TN_TEST_COLUMN = 1;

const int TN_TEST_SUBITEM = 2;

const int TN_HIT_LEFT = 1;
